# opensky_viewer

./: .gitignore  .pre-commit-config.yaml  .python-version  README.md  main.py  pyproject.toml  sample.txt
config/: example.toml
data/: flights_data_20250615081000.csv  flights_data_20250622_210254.csv  flights_data_20250622_222721.json  flights_data_20250622_223021.OutputFormat.JSON  flights_data_20250622_223322.json  flights_data_20250622_223622.OutputFormat.JSON  flights_data_20250622_223923.OutputFormat.JSON  flights_data_20250622_224223.OutputFormat.JSON  flights_data_20250622_224524.json  flights_data_20250622_224825.OutputFormat.JSON  flights_data_20250622_225125.json  flights_data_20250622_225426.OutputFormat.JSON  flights_data_all_20250622_225726.OutputFormat.JSON
icecold/: config.py
opensky_viewer/: config.py  models.py
