[tool.poetry]
name = "opensky_viewer"
version = "0.1.0"
description = "A project using OpenSky API to fetch flight data."
authors = ["Jed Mitten <jedmitten@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10"
opensky-api = { git = "https://github.com/openskynetwork/opensky-api.git", subdirectory = "python" }
pandas = "*"
toml = "*"
pydantic = "^2.11.7"
urwid = "^3.0.2"
pytz = "^2025.2"
urllib3 = "2.5.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.4.0"
pytest-sugar = "^1.0.0"
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
